<resources>
    <string name="app_name">Reddit wallpaper manager</string>
    <string name="VerticalWallpapers">VerticalWallpapers</string>
    <string name="Load_favourites">Load favourites</string>
    <string name="delete_fav">Delete favourites</string>
    <string name="vertical_images_only">Vertical images only</string>
    <string name="load">Load</string>
    <string name="subreddit">Subreddit:</string>
    <string name="save">Save</string>
    <string name="set">Set</string>
    <string name="random">random</string>
    <string name="image_loading">Image loading...</string>
    <string name="enter_your_favourite_subreddit_and_tap_load">Enter your favourite subreddit and tap load!</string>
</resources>
