<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/action_bar">

    </include>

    <Button
        android:id="@+id/anotherOne"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectanglebutton"
        android:backgroundTint="#5A595B"
        android:drawableStart="@drawable/ic_star_black_24dp"
        android:enabled="false"
        android:onClick="onSaveToInternalStorageClick"
        android:paddingStart="5dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/progressBar" />

    <EditText
        android:id="@+id/subreddit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/VerticalWallpapers"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/subreddit"
        app:layout_constraintStart_toStartOf="@+id/subreddit"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:onClick="onLoadClick"
        android:text="@string/load"
        app:layout_constraintBaseline_toBaselineOf="@+id/subreddit"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/VerticalImages"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:buttonTint="@color/colorPrimary"
        android:checked="true"
        android:text="@string/vertical_images_only"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subreddit" />


    <TextView
        android:id="@+id/guide"
        android:layout_width="284dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Enter your favourite subreddit and tap load!"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/view_pager"
        app:layout_constraintStart_toStartOf="@+id/view_pager"
        app:layout_constraintTop_toTopOf="@+id/view_pager" />

    <com.gigamole.infinitecycleviewpager.HorizontalInfiniteCycleViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="74dp"
        app:icvp_center_page_scale_offset="30dp"
        app:icvp_interpolator="@android:anim/accelerate_decelerate_interpolator"
        app:icvp_max_page_scale="1"
        app:icvp_medium_scaled="true"
        app:icvp_min_page_scale="0.8"
        app:icvp_min_page_scale_offset="-180dp"
        app:icvp_scroll_duration="250"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/VerticalImages"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_in"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/changeWallpaper"
        app:layout_constraintStart_toStartOf="@+id/changeWallpaper" />

    <!--<Button-->
    <!--android:id="@+id/changeWallpaper"-->
    <!--android:layout_width="65dp"-->
    <!--android:layout_height="65dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:background="@drawable/roundedbutton"-->
    <!--android:backgroundTint="#F44336"-->
    <!--android:enabled="false"-->
    <!--android:onClick="onSetWallpaperClick"-->
    <!--android:text="@string/set"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="@+id/view_pager"-->
    <!--app:layout_constraintStart_toStartOf="parent" />-->

    <ImageButton
        android:id="@+id/changeWallpaper"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="#F44336"
        android:clickable="false"
        android:contentDescription="@string/set"
        android:enabled="false"
        android:onClick="fuck"
        android:src="@drawable/myselector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view_pager"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/ic_done_black_24dp" />

    <Button
        android:id="@+id/random"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectanglebutton"
        android:backgroundTint="#545355"
        android:drawableStart="@drawable/ic_shuffle_black_24dp"
        android:drawableTint="#F9F9F9"
        android:enabled="false"
        android:onClick="onSetRandomWallpaperClick"
        android:paddingStart="5dp"
        android:text="@string/random"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/progressBar" />


</android.support.constraint.ConstraintLayout>